paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/tags_1b/sample_001/target.compile.log
error[E0369]: binary operation `==` cannot be applied to type `Option<&Tnode<'_>>`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/tags_1b/sample_001/target.rs:36:16
   |
36 |     if sp.left == sp.right {
   |        ------- ^^ -------- Option<&Tnode<'_>>
   |        |
   |        Option<&Tnode<'_>>
   |
note: an implementation of `PartialEq` might be missing for `Tnode<'_>`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/tags_1b/sample_001/target.rs:1:1
   |
 1 | struct Tnode<'a> {
   | ^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Tnode<'_>` with `#[derive(PartialEq)]`
   |
 1 + #[derive(PartialEq)]
 2 | struct Tnode<'a> {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.